# echos-lab

./: .dockerignore  .env.full.example  .env.reply-guy.example  .gitignore  Dockerfile  Makefile  README.md  agent-profile.yaml.example  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: lint.yml  test.yml
docs/: credentials.md  reply-guy.md
echos_lab/: .env.example  Dockerfile  __main__.py  cli.py  init_bot.sh  install_requirements.sh  login_to_twitter.py  main.py  requirements.txt
echos_lab/common/: env.py  logger.py  utils.py
echos_lab/crypto/: abis.py  create_token.py  crypto_connector.py  crypto_helpers.py  query_balances.py  trade_tokens.py  uniswap_pricing.py
echos_lab/crypto_lib/: create_token.py  crypto_connector.py  crypto_helpers.py  goldsky.py  query_balances.py  trade_tokens.py  uniswap_pricing.py
echos_lab/db/: db_connector.py  db_seed.py  db_setup.py  models.py
echos_lab/engines/: agent_context.py  agent_interests.py  context_store.py  follow_user.py  full_agent.py  full_agent_tools.py  image_creator.py  json_formatter.py  legacy.py  memes.py  post_maker.py  post_retriever.py  profiles.py  prompts.py
echos_lab/slack/: client.py  handlers.py  types.py
echos_lab/slack_lib/: client.py  handlers.py
echos_lab/telegram/: telegram_client.py  telegram_connector.py  telegram_groups.py
echos_lab/telegram_lib/: create_telegram_group.py  telegram_connector.py
echos_lab/testing/: scratch.py  twitter_replies.py
echos_lab/twitter/: twitter_auth.py  twitter_client.py  twitter_connector.py  twitter_helpers.py  twitter_pipeline.py  twitter_poster.py  twitter_workflows.py  types.py
echos_lab/twitter_lib/: auth.py  twitter_connector.py  twitter_helpers.py  twitter_pipeline.py  (+1 more)
tests/: conftest.py  test_agent_context.py  test_db.py  test_profiles.py  test_prompts.py  test_twitter_client.py  test_twitter_helpers.py  test_twitter_pipeline.py  test_twitter_poster.py  test_utils.py
(+18 files in other folders)
